@@ -15,6 +15,7 @@ Changelog for 1.3.33
 * Added secondary partnumber ordering to eca history report (Chris T)
 * Fixed default_reportable not respected for invoices (Chris T, 799)
 * Fixed dropdowns not affecting date range in tax reports (Chris T, 811)
+* Added missing taxincluded handling, added script to populate (Chris T, 832)
 
 Changelog for 1.3.32
 * Fixed em-dash handling for pdfs (Chris T)
